# intro-axum

./: .env  Cargo.toml  README.md  docker-compose.yml  t
src/: lib.rs  main.rs
src/data_routes/: create_task.rs  create_user.rs  delete_task.rs  get_one_task.rs  get_tasks.rs  guard.rs  mod.rs  partial_update_tasks.rs  update_tasks.rs  user.rs  users.rs
src/routes/: get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  set_middleware_custom_header.rs  validate_with_serde.rs
src/utils/: app_error.rs  jwt.rs
