[package]
name = "intro-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["cors"] }
